--- a/static/stat563/sheet_math.Rmd
+++ b/static/stat563/sheet_math.Rmd
@@ -59,6 +59,8 @@ $\Gamma(-1/2)=-2\Gamma(1/2)$, $\Gamma(0)=\Gamma(-1)=\infty$;
 
 $\Gamma(t) = \int_0^\infty x^{t-1}e^{-x}dx$, $\int_0^1 x^{a-1}(1-x)^{b-1}dx = \frac{\Gamma(a)\Gamma(b)}{\Gamma(a+b)}$;
 
+$\Gamma(\frac{2k+1}{2})=\frac{(2k)!\sqrt\pi}{4^{k}k!},k>0$;$\frac{(-4)^{-k}(-k)!\sqrt\pi}{(-2k)!},k<0$
+
 $\sum_{n=0}^{\infty}{ar^n}=\frac{a}{1-r}, |r|<1$; $\sum_{k=0}^{n-1}{ar^n}=\frac{a(1-r^n)}{1-r}$;
 
 
@@ -77,13 +79,18 @@ $\sum_{k=0}^n c^k=\frac{c^{n+1}-1}{c-1}$  & $\sum_{k=0}^n \binom{n}{k}a^{n-k}b^k
 
 $P(X\le y|X\ge c)=\frac{P(X\le y,X\ge c)}{P(X\ge c)}=\frac{P(c\le X\le y)}{1-P(X\le c)}=\frac{F(y)-F(c)}{1-F(c)}$
 
-$\frac{5*0.99}{5*0.99+995*0.02}=0.1992$;
+CDF nondecreasing, right-continuou; 
+$\lim\limits_{x\to\infty}F(x)=1$;
+$\lim\limits_{x\to-\infty}F()=0$
 
+$Z=X+Y$,$X\perp Y$,$g(z)=\int_{-\infty}^{\infty}f_X(w)f_Y(z-w)dw$
+
+$\frac{5*0.99}{5*0.99+995*0.02}=0.1992$; 
+$V[X|Y]=E[X-E(X|Y)^2|Y]$
 
 $Pois(3)$,$E[30-3X-X^2]=30-3EX-EX^2=9$;
 
 $U(0,1)$,$E[Y]=E(E[Y|X])=\alpha+\beta EX^2=\alpha+\beta/3$
-
 
 
 \dotfill
@@ -99,11 +106,10 @@ $f_Y(y)=\begin{cases}\frac{1}{9}+\frac{1}{9\sqrt y}&1\le y\le4\\\frac{2}{9\sqrt 
 
 \textbf{2.3 Moment}\hrulefill
 
-$M_X(t)=E[e^{tX}]$
+$M_X(t)=E[e^{tX}]$; 
+$M_{\bar X}(t)=[M_{X}(\frac{t}{n})]^n$;
+$M_X^{(n)}(0)=EX^n$
 
-$\frac{e^t}{4-3e^t}\sim Geom(\frac14)$; 
-$EX=\frac1p=4$; $VarX=\frac{1-p}{p^2}=12$; 
-$\frac{\sigma}\mu=\frac{\sqrt3}2$ 
 
 \dotfill
 
@@ -121,13 +127,42 @@ $E[X^{1,2,3}]=e^{\frac12},e^2,e^{\frac92}$
 
 skewness $E\frac{X-\mu^3}{\sigma^3}=(e+2)\sqrt{e-1}$
 
+\textbf{Geom}\hrulefill
+
+
+*$\frac{e^t}{4-3e^t}\sim Geom(\frac14)$; 
+$EX=\frac1p=4$; $VarX=\frac{1-p}{p^2}=12$; 
+$\frac{\sigma}\mu=\frac{\sqrt3}2$ 
+
+*2B2W,pick,replace opposite, p=0, x=1,3,5;p=$\frac14$,x=2,4,6
+
+X=all same color,Y=$\frac{X}2\sim Geo(\frac14)$; EX,$2\frac1p=8$; VX,$4\frac{1-p}{p^2}=48$
+
+*$cpq^{x-1}$,x=a,a+1, F=$c[\sum_1^\infty pq^{x-1}-\sum_1^{a-1} pq^{x-1}]$
+=$c[1-(1-q^{a-1})]$=1; X+1-a=Y$\sim Geo(p)$, EX=EY+a-1=$\frac1p$+a-1, VX=VY=$\frac{1-p}{p^2}$
+
+\textbf{NB}\hrulefill
+
+6coins,toss even head p=$\frac12$; X $2^{nd}$success$\sim NB(2,\frac12)$; $EX=VX=4$
+
+\textbf{Pois}\hrulefill
+
+Pois($\mu$);x=1 uniq-mode; $\frac{p_m}{p_{m-1}},\frac{p_m}{p_{m+1}}\ge1$,$x\in[\mu-1,\mu]$,$\mu\in(1,2)$
+
+
+*Time:$\Gamma(\alpha,\beta)$,Vist:$Pois(\lambda=\frac{t}{\beta})$,$P(T>t)=P(X\le\alpha-1)$
+
+10($\alpha$) visits longer than 8(t) min, 1.5vist/min($\beta$) =0.2424
+
 
 \textbf{Expo}\hrulefill
 
-$X_1\sim \Gamma(\alpha_1,\beta)$, $X_2\sim \Gamma(\alpha_2,\beta)$, $U=\frac{X_1}{V=X_1+X_2}\sim Beta(\alpha_1,\alpha_2)$;
+Exp,Geom Memoryless $P(X>a+b|x>a)=P(x>b)$
+
+$X_1\sim \Gamma(\alpha_1,\beta)$, $X_2\sim \Gamma(\alpha_2,\beta)$, $U=\frac{X_1}{V=X_1+X_2}\sim B(\alpha_1,\alpha_2)$;
 
 $X_1,X_2\sim Exp(1),\Gamma(1,1)$, 
-$U\sim \beta(1,1),U(0,1)$;
+$U\sim B(1,1),U(0,1)$;
 $V\sim \Gamma(2,1)$,$xe^{-x}$
 
 \dotfill
@@ -136,7 +171,7 @@ $X_1,X_2\sim Exp(\lambda)$, $Y=X_1-X_2\sim DExp(0,\lambda)$, $\frac\lambda2e^{-\
 
 \dotfill
 
-$X\sim Beta(\theta,1)$, $-\ln X\sim Expo(\theta)$, $-2\theta\sum\ln X\sim \Gamma(n,2),\chi^2_{2n}$
+$X\sim B(\theta,1)$, $-\ln X\sim Exo(\theta)$, $-2\theta\sum\ln X\sim \Gamma(n,2),\chi^2_{2n}$;
 
 \textbf{DExp,Laplace}\hrulefill
 
@@ -144,15 +179,53 @@ $L(\theta|x)=2^{-n}e^{-\sum|x_i-\theta|}$; $\hat\theta_{MLE}=X_{((n+1)/2)}$ samp
 
 $E[X_{((n+1)/2)}=\int_{-\infty}^{\theta}x\frac12e^{x-\theta}dx+\int_{\theta}^{\infty}x\frac12e^{-x+\theta}dx=\theta$
 
+\textbf{Gamma}\hrulefill
+
+$\bar X_{\Gamma}\sim\Gamma(n\alpha,\frac{\beta}n)$; $\chi^2_{\nu}\sim\Gamma(\frac\nu2,2)$
+
+
+\textbf{Beta}\hrulefill
+
+$B(\alpha,\beta)$$\perp$$B(\alpha+\beta,\gamma)$, $U=XY\sim B(\alpha,\beta+\gamma)$
+
+\dotfill
+
+\textbf{4.4 Beta-Bino}
+
+$X|P\sim Bin(n,P)$, 
+$P\sim B(\alpha,\beta)$;
+$EX=E[E(X|P)]=E[nP]=n\frac{\alpha}{\alpha+\beta}$;
+
+\resizebox{1\hsize}{!}{$VX=E[Var(X|P)]+Var[E(X|P)]=E[npq]+Var[np]=\frac{n\alpha\beta(\alpha+\beta+n)}{(\alpha+\beta)^2(\alpha+\beta+1)}$}
+
+$P\sim B(\frac12,\frac12)$, $EX=\frac{n}2$; $VX=\frac{n(n+1)}8$;
+
+$P\sim B(1,1)$, $X\sim U(0,n+1)$, $P|X\sim B(x+1,n-x+1)$
+
+\textbf{Pois-Bino}\hrulefill
+
+$Pois(\lambda)$.$S_{10}=\sum^{10}_{i=1} X_i\sim Pois(10\lambda)$. 
+
+$M_{S_{10}}(t)=\prod_{i=1}^{10}M_X(t)=[e^{\lambda(e^t-1)}]^{10}=e^{10\lambda(e^t-1)}$
+
+$S_{10}=s=S_{4}+S_{6}$, $P(S_{4}|S_{10})=\frac{P(S_{4},S_{6}=s-S_{10})}{P(S_{10})}\sim Bino(s,\frac25)$
+
+$Pois(\lambda)$, $Pois(3\lambda)$ $P(x|x+y=5)=\frac{P(x)P(y=5-x)}{P(x+y=5)}\sim Bino(5,\frac13)$;
 
 
 \textbf{Uniform}\hrulefill
 
-$F\sim Unif(0,1),Beta(1,1)$; $-\ln F,-\ln(1-F)\sim Exp(1),Gamma(1,1)$;
+$F\sim U(0,1),B(1,1)$; $-\ln F,-\ln(1-F)\sim Exp(1),\Gamma(1,1)$;
+
+$-\lambda\ln U\sim Exp(\lambda)$;
+$-2\sum^\nu\ln U\sim \chi^2_{2\nu}$;
+
+$-\beta\sum^\alpha\ln U\sim \Gamma(\alpha,\beta)$;
+$\frac{\sum^a\ln U}{\sum^{a+b}\ln U}\sim B(a,b)$
 
 \dotfill
 
-$Unif(0,1)$, $U=Y-X$,$0<x<y<1$, $g(u,v)=1$,$0<v<1-u$,$f_U(u)=1-u$,$0<u<1$;
+$U(0,1)$, $U=Y-X$,$0<x<y<1$, $g(u,v)=1$,$0<v<1-u$,$f_U(u)=1-u$,$0<u<1$;
 $f_{|U|}(u)=2(1-u)$;$E[|U|]=\frac13$;
 
 \dotfill
@@ -164,7 +237,10 @@ $\begin{cases}f_U(u)=0;F_U(u)=0&o.w.\\\int_0^u=u ;\int_0^u=\frac{u^2}2&u\in(0,1)
 
 \textbf{N}\hrulefill
 
-$V[\bar X]=\frac{\sigma^2}{n}$; 
+$E[\bar X]=\mu$, $V[\bar X]=\frac{\sigma^2}n$, $E[S^2]=\sigma^2$ without normality;
+
+$\bar X\sim n(\mu,\frac{\sigma^2}n)$; $\bar X\perp S^2$; $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$
+
 $E(Z^{2k})=\frac{(2k)!}{2^KK!}, k=1,2,..$;
 $E(Z^{2k+1})=0$
 
@@ -182,7 +258,7 @@ $E[\hat\sigma^2]=\frac{E[\sum(x_i-\bar x)^2]}{n}=\frac{(n-1)E[S^2]}{n}=\frac{(n-
 
 $E[\Phi^{2}(z)]=V[\Phi(z)]+E[\Phi(z)]^{2}=\frac1{12}+\frac14=\frac13$;
 
-$E[n\Phi^{n-1}(z)]=\int_0^1n\Phi^{n-1}\phi(z)dz=\int_0^1n\Phi^{n-1}d\Phi(z)=\Phi^n(z) |_{0}^{1}=1$;
+$E[n\Phi^{n-1}(z)]=\int_0^1n\Phi^{n-1}\phi(z)dz=\int_0^1n\Phi^{n-1}d\Phi(z)=1$;
 
 \dotfill
 
@@ -193,7 +269,18 @@ $E[n\Phi^{n-1}(z)]=\int_0^1n\Phi^{n-1}\phi(z)dz=\int_0^1n\Phi^{n-1}d\Phi(z)=\Phi
 $\frac{Z_1}{Z_2}$;
 $f(u)=\int_{-\infty}^{\infty}f(1)f(2)|v|dv=2\int_{0}^{\infty}=\frac{1}{\pi(u^2+1)}\sim Cauch(0,1)$
 
+$\bar X\sim Cauchy(0,\sigma)$, $\sum^{n} X\sim Cauchy(0,n\sigma)$; $Z^2\sim\chi^2_1$
+
 \dotfill
+
+\resizebox{1\hsize}{!}{$\frac{\bar X-\mu}{S/\sqrt{n}},\frac{\frac{\bar x-\mu}{\sigma/\sqrt{n}}}{\sqrt{S^2/\sigma^2}},t_{n-1}$;
+$\frac{S_X^2/\sigma_X^2}{S_Y^2/\sigma_Y^2},F_{n-1,m-1}$ 
+$\frac{S_X^2}{\sigma_X^2},\chi^2$;
+$F_{(p,q)}$, $\frac{\frac{p}{q}X}{1+\frac{p}{q}X},B(\frac{p}2,\frac{q}2)$}
+
+$t_1,Cau(0,1)$; $\chi^2_{2},Exp(2)$;$\chi^2_{p},\Gamma(\frac{p}2,2)$;$U+V,\chi^2_{m+n}$;
+$T_{(q)}^2$, $F_{(1,q)}$; 
+
 
 
 *$X\sim N(\mu,\sigma^2)\perp Y\sim N(\gamma,\sigma^2)$, $U=X+Y\perp V=X-Y$
@@ -209,31 +296,15 @@ $E[V],\mu-\gamma$;
 $V[U]=V[X]+V[Y]=2\sigma^2$
 
 
+\dotfill
+
+\resizebox{1\hsize}{!}{$(X,Y)=(2\pi\sigma_X\sigma_Y\sqrt{1-\rho^2})^{-1}\exp(-\frac{1}{2(1-\rho^2)}[(\frac{x-\mu_X}{\sigma_X})^2-2\rho(\frac{x-\mu_X}{\sigma_X})(\frac{y-\mu_Y}{\sigma_Y})+(\frac{y-\mu_Y}{\sigma_Y})^2])$}
 
 
+$Y|X\sim n(\mu_Y+\rho\frac{\sigma_Y}{\sigma_X}(x-\mu_X),\sigma_Y^2(1-\rho^2))$
 
+$aX+bY\sim n(a\mu_X+b\mu_Y,a^2\mu_X^2+b^2\mu_Y^2+2ab\rho\sigma_X\sigma_Y)$
 
-\textbf{4.4 Beta-Bino}\hrulefill
-
-$X|P\sim Bin(n,P)$, 
-$P\sim Beta(\alpha,\beta)$;
-$EX=E[E(X|P)]=E[nP]=n\frac{\alpha}{\alpha+\beta}$;
-
-$VX=E[Var(X|P)]+Var[E(X|P)]=E[npq]+Var[np]=\frac{n\alpha\beta(\alpha+\beta+n)}{(\alpha+\beta)^2(\alpha+\beta+1)}$
-
-$P\sim Beta(\frac12,\frac12)$, $EX=\frac{n}2$; $VX=\frac{n(n+1)}8$;
-
-$P\sim Beta(1,1)$, $X\sim Unif(0,n+1)$, $P|X\sim Beta(x+1,n-x+1)$
-
-\textbf{Pois-Bino}\hrulefill
-
-$Pois(\lambda)$.$S_{10}=\sum^{10}_{i=1} X_i\sim Pois(10\lambda)$. 
-
-$M_{S_{10}}(t)=\prod_{i=1}^{10}M_X(t)=[e^{\lambda(e^t-1)}]^{10}=e^{10\lambda(e^t-1)}$
-
-$S_{10}=s=S_{4}+S_{6}$, $P(S_{4}|S_{10})=\frac{P(S_{4},S_{6}=s-S_{10})}{P(S_{10})}\sim Bino(s,\frac25)$
-
-$Pois(\lambda)$, $Pois(3\lambda)$ $P(x|x+y=5)=\frac{P(x)P(y=5-x)}{P(x+y=5)}\sim Bino(5,\frac13)$;
 
 \textbf{4.5 Cov Corr}\hrulefill
 
@@ -245,12 +316,13 @@ $Cov(X,X)=E[X^2]-\mu_X^2$;
 $X\perp Y$,$Cov(X+Y,X-Y)=Cov(X,X)-Cov(Y,Y)=V[X]-V[Y]$
 
 $Cor(X,Y)=\frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}$,
-$=\rho_{XY}=\frac{\sigma_{XY}}{\sigma_X\sigma_Y}$ 
+$\rho_{XY},\frac{\sigma_{XY}}{\sigma_X\sigma_Y}$,
+$\frac{1/3-(7/12)^2}{11/144}$,$-\frac1{11}$
 
 $Cov[\bar X,X_n]=\frac{Cov[\sum X_i,X_n]}n=\frac{\sigma^2}{n}$;
 $Cor[\bar X,X_n]=\frac{\sigma^2/n}{\sigma\sigma/\sqrt{n}}=\frac1{\sqrt{n}}$
 
-\textbf{4.7 Inequity;Chebychev;Cauchy-Schwarz;Jensen}\hrulefill
+\textbf{4.7 Inequity;Chebyshev;Cauchy-Schwarz;Jensen}\hrulefill
 
 $g(x)\ge0 \forall r>0$,
 $P(g(X)\ge r)\le\frac{Eg(X)}{r}$;
@@ -258,6 +330,10 @@ $P(|x-\mu|<t\sigma)\ge1-\frac1{t^2}$;
 
 $\sigma=3$, $t=2$; $P(-4<x<8)\ge\frac34$;
 $\sigma=2$, $t=\frac52$,$P(-2<x<8)=\frac{21}{25}$
+$U(a,b)$,$\sigma^2=\frac{(b-a)^2}{12}$,
+$P(|x-\mu|<1.5\sigma)=P(+)-P(-)=$
+
+$\frac{\mu+1.5\sigma}{b-a}-\frac{\mu-1.5\sigma}{b-a}=\frac{3\sigma}{b-a}=0.866\ge 0.555$ Che conservative
 
 $|EXY|\le E|XY|\le(E|X|^2)^{\frac12}(E|Y|^2)^{\frac12}$;
 $Cov(X,Y)\le \sigma^2_X\sigma^2_Y$;
@@ -270,13 +346,20 @@ Convex function $Eg(X)\ge g(EX)$
 
 $X_{(k)}=k\binom{n}{k}f(x)[F(x)]^{k-1}[1-F(x)]^{n-k}$;
 
-$X_{(1)}=nf(x)[1-F(x)]^{n-1}$;
-$X_{(n)}=nf(x)[F(x)]^{n-1}$
+$X_{(1)}=nf(x)[1-F(x)]^{n-1}$;$F=1-[1-F(x)]^{n}$;
+
+$X_{(n)}=nf(x)[F(x)]^{n-1}$;$F=[F(x)]^{n}$;
+$f(1,..,n)=n!\prod f(x_i)$
+
+$\frac{n!f(u)f(v)}{(i-1)!(j-1-i)!(n-j)!}[F(u)]^{i-1}[F(v)-F(u)]^{j-1-i}[1-F(v)]^{n-j}$
+
+$-\infty<u<v<\infty$; 
+$X_{(1),(n)}=n(n-1)f_{(1)}f_{(n)}[F_{(n)}-F_{(1)}]^{n-2}$;
 
 \dotfill
 
 $U(0,1)$
-$X_{(k)}\sim Beta(k,n-k+1)$;$X_{(1)}=n[1-x]^{n-1}$;$X_{(n)}=nx^{n-1}$
+$X_{(k)}\sim B(k,n-k+1)$;$X_{(1)}=n[1-x]^{n-1}$;$X_{(n)}=nx^{n-1}$
 
 $EX_{(k)}=\frac{k}{n+1}$;$VarX_{(k)}=\frac{k(n-k+1)}{(n+1)^2(n+2)}$;
 
@@ -300,26 +383,50 @@ $V[X_{n}]=\frac{n\theta^2}{(n+1)^2(n+2)}$;
 $EX_{(n)}=\frac{n\theta}{n+1}$, $E[\frac{n+1}{n}X_{(n)}]=\theta$;
 $E[\frac{n+2}{n}X_{(n)}^2]=\theta^2$is UMVUE
 
+$f_{rm}=\frac{n(n-1)r^{n-2}}{\theta^n}$,$r\in(0,\theta)$,$m\in(\frac{r}2,\theta-\frac{r}2)$;
+
+$f_R=\int_{\frac{r}2}^{\theta-\frac{r}2}dm=\frac{n(n-1)r^{n-2}(\theta-r)}{\theta^n}$,$r\in(0,\theta)$; $\theta$=1,$Beta(n-1,2)$;
+
+$f_m=\int_0^{2m}dr=\frac{n(2m)^{n-1}}{\theta^n}$,$m\in(0,\frac{\theta}2)$;
+V[R]=$\frac1{\lambda^2}\sum_{k=1}^{n-1}\frac1k$;
+
+$f_m=\int_0^{2(\theta-m)}dr=\frac{n[2(\theta-m)]^{n-1}}{\theta^n}$,$m\in(\frac{\theta}2,\theta)$;
+E[R]=$\frac1\lambda\sum_{k=1}^{n-1}\frac1k$
+
 \dotfill
 
-$Expo(\lambda)$:
-$X_{(1)}=n\lambda e^{-n\lambda x}\sim Expo(n\lambda)$
+$Exp(\lambda)$:
+$X_{(1)}=n\lambda e^{-n\lambda x}\sim Exp(n\lambda)$;$F=1-e^{-n\lambda x}$;
+
+$X_{(n)}=n\lambda e^{-\lambda x}(1-e^{-\lambda x})^{n-1}$;$F=(1-e^{-\lambda x})^n$
 
 
-\textbf{5.5 Convergence}\hrulefill
 
-CLT $\frac{\sqrt{n}(\bar X_n-\mu)}{\sigma}\overset{\mathcal{D}}\to N(0,1)$;
-Stein $n(\theta,\sigma^2)$,$E[g(X)(X-\theta)]=\sigma^2E[g'(X)]$;
+\textbf{5.5 Convergence;CLT;Slutsky }\hrulefill
 
+$X_n\overset{a.s.}\to X$,$P(\lim\limits_{n\to\infty}|X_n-X|<\epsilon)$=1;
+$\overset{\mathcal{P}}\to$,$\lim\limits_{n\to\infty}P(|X_n-X|<\epsilon)$=1
+ 
+$X_n\overset{\mathcal{D}}\to X$; $\lim\limits_{n\to\infty}F_{X_n}(x)=F_X(x)$;
+$\frac{\sqrt{n}(\bar X_n-\mu)}{\sigma}\overset{\mathcal{D}}\to N(0,1)$;
+
+$X_n\overset{\mathcal{D}}\to X$,
+$Y_n\overset{\mathcal{P}}\to a$,
+$X_nY_n\overset{\mathcal{D}}\to aX$,
+$X_n+Y_n\overset{\mathcal{D}}\to X+a$,
 
 \textbf{Delta Method}: if$\sqrt n(Y_n-\theta)\overset{D}{\to}N(0,\sigma^2)$,
+
 
 $g'(\theta)\neq0$,
 $\sqrt n[g(Y_n)-g(\theta)]\overset{D}{\to}N(0,\sigma^2[g'(\theta)]^2)$
 
 $g'(\theta)=0$,
-$\sqrt n[g(Y_n)-g(\theta)]\overset{D}{\to}\sigma^2\frac{g''(\theta)}2\chi^2_1)$
+$\overset{D}{\to}\sigma^2\frac{g''(\theta)}2\chi^2_1)$
 
+$g(x)=g(x_0)+g'(x_0)(x-x_0)+g''(x_0)\frac{(x-x_0)^2}2+R$
+
+Stein $n(\theta,\sigma^2)$,$E[g(X)(X-\theta)]=\sigma^2E[g'(X)]$;
 \dotfill
 
 *$g(\mu)=\frac1{\mu}$, $E_\mu(\frac1{X})\approx\frac1{\mu}$,$Var_\mu(\frac1{X})\approx(\frac1{\mu})^4Var_\mu(X)$
@@ -342,12 +449,15 @@ $\sqrt{n}(\bar X_n^2-(\frac1{\lambda})^2)\to n(0,\frac4{\lambda^4})$
 $\sqrt{n}(e^{-\bar X_n}-e^{-\mu})\to n(0,\frac{[(e^{-\mu})']^2}{I(\mu)})=n(0,\mu e^{-2\mu}))$
 
 
-\textbf{6.2.1 Suffi;6.2.2 Mini Suffi;6.2.3 Ancillary Stat}\dotfill
+\textbf{6.2.1 Suffi;6.2.2 Mini Suffi;6.2.3 Ancillary Stat}\hrulefill
 
-$\frac{\prod f(x|\theta)}{g(t|\theta)}=h(\vec x)$free of $\theta$;$\frac{f(x|\theta)}{f(y|\theta)}$ constant fn of $\theta$ if $T(\mathbf{x})=T(\mathbf{y})$\dotfill
+$\frac{\prod f(x|\theta)}{g(t|\theta)}=h(\vec x)$free of $\theta$;$\frac{f(x|\theta)}{f(y|\theta)}$ constant fn of $\theta$ if $T(\mathbf{x})=T(\mathbf{y})$
 
-$g_a(\theta)=\theta+a$, $[Y_n-\bar Y](g_a(\theta))=Y_n+a-\frac{\sum(Y_i+a)}n=Y_n-\bar Y$
-is invariant under location parameter$\theta$,$g(x|\theta)=f(x-\theta)$
+$g_a(\vec x)=x_i+a$, $G=\{g_a(\vec x): a\in \mathbf{R}\}$ is a group,is invariant under loc-para$\theta$
+$[Y_n-\bar Y]_{(g_a(\vec x))}=Y_n+a-\frac{\sum(Y_i+a)}n=(Y_n-\bar Y)_{(\vec x)}$
+
+
+Loca-scale familiy $g(x|\mu,\sigma)=\frac1{\sigma}f(\frac{x-\mu}{\sigma})$, $\mu$location-par,$\sigma$scale-par
 
 \textbf{6.2.4 Compl Suffi; Basu}\dotfill
 
@@ -360,9 +470,9 @@ Expo familiy $t/n=\bar Y$ is comp/suff, indep with $Y_n-\bar Y$
 
 \textbf{7 Point Estimation}\hrulefill
 
-\textbf{7.2.1 MoM}\dotfill
+\textbf{MOM} $\hat\mu=EX=\bar x$;$\hat\sigma^2=E[X^2]-EX^2=\frac{\sum x_i^2}{n}-\bar x^2$
 
-\textbf{7.2.2 MLE}\dotfill
+\textbf{7.2.2 MLE - Indecator fn}
 
 *$F(x)=(\frac{x}\theta)^2, 0\le x<\theta$
 
@@ -376,27 +486,61 @@ $\lim\limits_{n\to\infty}[EX_{(n)}-\theta]=0$; $\lim\limits_{n\to\infty}P(X_{(n)
 
 $\lim\limits_{n\to\infty}V[X_{(n)}]=\lim\limits_{n\to\infty}\frac{n}{(2n+1)^2(n+1)}\theta^2=0$
 
+\dotfill
+
+*$Y_i\sim Pois(\mu_i=\gamma x_i)$, $x_i$ known constants,
+
+$\hat\gamma_{mle}=\frac{\sum_{i=1}^{n}y_i}{\sum_{i=1}^{n}x_i}$;
+$E[\hat\gamma_{mle}]=\gamma$;$V[\hat\gamma_{mle}]=\frac{\gamma}{\sum_{i=1}^{n}x_i}$
+
+
+
 \textbf{7.2.3 Bayes estimator}\dotfill
 
 $X_n$iid$Expo(\theta)$, $\pi(\theta)\sim Expo(\lambda)$
 
 $\pi(\theta|\vec x)=\frac{g(\vec x|\theta)}{m(\vec x)}=\frac{f(\vec x|\theta)h(\theta)}{\int g(\vec x|\theta)d\theta}\propto L(\theta)h(\theta)\sim \Gamma(n+1,\frac{1}{\lambda+\sum x_i})$
 
-$\mathcal{L}_\theta(\hat\theta)=(\hat\theta-\theta)^2$; $\min$Posterior risk $E[\mathcal{L}_\theta(\hat\theta|\vec x)]$, Posterior mean $\hat\theta_{L_2Bayes}=E[\pi(\theta|\vec x)]=\frac{n+1}{\lambda+\sum x_i}=\frac{\lambda(\frac1\lambda,E[\theta])}{\lambda+n\bar x}+\frac{n\bar x(\frac1{\bar x},\hat\theta_{MLE})}{\lambda+n\bar x}$
+$\mathcal{L}_\theta(\hat\theta)=(\hat\theta-\theta)^2$, to $\min$Posterior risk $E[\mathcal{L}_\theta(\hat\theta|\vec x)]$, Posterior mean $\hat\theta_{L_2Bayes}=E[\pi(\theta|\vec x)]=\frac{n+1}{\lambda+\sum x_i}=\frac{\lambda(\frac1\lambda,E[\theta])}{\lambda+n\bar x}+\frac{n\bar x(\frac1{\bar x},\hat\theta_{MLE})}{\lambda+n\bar x}$; 
+
+absolute error loss $|a-\theta|$, post-median$\hat\theta_{L_1Bayes}=F^{-1}(\frac12)$;
+
+binary$0,\hat\theta=\theta;1,o.w.$ po-mode$\hat\theta_{L_0Bayes}=(\alpha-1)\beta$,$\Gamma'\overset{set}{=}0$
+
+\dotfill
+
+$X\sim Pois(\theta)$, $\theta\sim \Gamma(\alpha,\beta)$ (known
+
+$\pi(\theta|\vec x)\sim \Gamma(\alpha+\sum x_i,\frac{\beta}{n\beta+1})$;
+$\hat\theta_{L_2Bayes}=\frac{(\alpha+\sum x_i)\beta}{n\beta+1}$
+
+\dotfill
+
+$X\sim Bino(n,\theta)$, $\theta\sim Beta(\alpha,\beta)$;
+
+$\pi(\theta|x)\sim B(\alpha+x,\beta-n+x)$;
+$\hat\theta_{L_2Bayes}=\frac{\alpha+x}{\alpha+\beta+n}$
+
+\dotfill
+
+$n(\theta,\sigma^2)$, $\theta\sim n(\mu,\tau^2)$;
+$f(\theta|x)\sim N(\frac{\tau^2x+\sigma^2\mu}{\tau^2+\sigma^2},\frac{\sigma^2\tau^2}{\sigma^2+\tau^2})$
+
 
 
 
 \textbf{7.3.1 MSE}\dotfill
 
 
-$MSE=V[S_k^2]+Bias^2=[\frac{2(n-1)}{k^2}+(\frac{n-1}{k}-1)^2]\sigma^4$;
+$MSE=E[(T-\theta)^2]=V[S_k^2]+Bias^2=[\frac{2(n-1)}{k^2}+(\frac{n-1}{k}-1)^2]\sigma^4$;
 
 $S_k^2=\frac{\sum(X_i-\bar X)^2}k$;$\frac{\partial MSE}{\partial k}\overset{set}=0$,$S_{n+1}^2\min(MSE)$
 
+$kS^2_{k+1}=(n-1)S_k^2+\frac{k}{k+1}(X_{k+1}-\bar X_k)^2$
 
 \textbf{7.3.2 CRLB}\dotfill
 
-$Var_\theta W(\vec X)\ge\frac{(\frac{d}{d\theta}E_\theta W(\vec X))^2}{nE_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]}=\frac{[\tau'(\theta)]^2}{nI_\theta}$
+$Var_\theta W(\vec X)\ge\frac{(\frac{d}{d\theta}E_\theta W(\vec X))^2}{nE_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]}=\frac{[\tau'(\theta)]^2}{nI_\theta}$,$h(\theta)=E[W]$
 
 \dotfill
 
@@ -409,9 +553,9 @@ $VX_{(90)}\ge\frac{g'(\theta)^2}{nI_{\theta}}=\frac{(\ln10)^2}{n\theta^2}$
 
 *$N(\mu,\sigma^2)$,$\frac{X_{(95)}-\mu}{\sigma}=Z_{(95)}=1.645$; $X_{(95)}=\mu+1.645\sigma$;
 
-$\frac{d}{d\mu}X_{(95)}=1$; $V[\hat\mu_{(95)}]\ge\frac{\sigma^2}{n}$
+$E[\frac{\sum(X_{(95)}-\mu)^2}{n}]=1.645^2\sigma^2=g(\sigma^2)$;$g'(\sigma^2)=1.645^2$
 
-$\frac{d}{d\sigma}X_{(95)}=1.645$; $V[\hat\sigma^2_{(95)}]\ge\frac{1.645^2\cdot2\sigma^4}{n}>\frac{2\sigma^4}{n}$
+$V[\hat\sigma^2_{(95)}]\ge\frac{2(1.645\sigma)^4}{n}>\frac{2\sigma^4}{n}$
 
 
 
@@ -446,27 +590,19 @@ $E[\frac{Y(n-Y)}{n(n-1)]}=pq$;
 $E[\frac{Y!(n-Y)!}{(Y-k)!(k-Y)!k!(n-k)!}]=\binom{n}{k}p^k(1-p)^{n-k}$
 
 
-\textbf{7.3.4 Loss function}\dotfill
-
-absolute error loss $L(\theta,a)=|a-\theta|$
-
-squared error loss $L(\theta,a)=(a-\theta)^2$
-
-binary loss $L(\theta,a_0)=\begin{cases}0&\theta\in\Theta_0\\1&\theta\in\Theta^c_0\end{cases}$
-
 
 
 \textbf{8 Hypo test;Neyman-Pearson;MLR;Karlin-Rubin}\hrulefill
 
 
 
-Size:$\alpha=P_{H_0}(RR)$ Power:$\beta=1-\alpha=P_{H_1}(RR)$
+Size$\alpha_{I}=P_{H_0}(RR)$ Power$=1-\beta_{II}=P_{H_1}(RR)$; $Z_{1-\beta}=-Z_{\beta}$
 
-$H_0:\theta=\theta_0$,$H_1:\theta=\theta_1$,$\theta_0<\theta_1$, RR  $\Lambda=\frac{L(\theta_0)}{L(\theta_1)}<C$ is MP
+$H_0:\theta=\theta_0$,$H_1:\theta=\theta_1$,$\theta_0<\theta_1$, RR  $\Lambda=\frac{\sup L(\theta_0)}{\sup L(\theta_1)}<C$ is MP
 
 Expo family $g(t|\theta)=h(t)c(\theta)e^{W(\theta)t}$ T has MLR.
 
-T free of $\theta$ is Suffi, $\Lambda=\frac{L(\theta_0)}{L(\theta_1)}$ has $\nearrow$ MLR in T,$T\le C$ $\Lambda\searrow$,$T\ge C$, $P_{H_0}(RR)=\alpha$ is UMP
+T free of $\theta$ is Suffi, $\Lambda=\frac{L(\theta_0)}{L(\theta_1)}$ has $\nearrow$ MLR in T,$T\le C$ $\Lambda\searrow$,$T\ge C$, $P_{H_0}(RR)=\alpha$ is UMP;  $-2\ln\Lambda\overset{D}\to\chi^2_1$
 
 \dotfill
 
@@ -474,7 +610,7 @@ T free of $\theta$ is Suffi, $\Lambda=\frac{L(\theta_0)}{L(\theta_1)}$ has $\nea
 
 $\alpha=P_{\theta_0}(x_1<\frac23)=\int_0^{\frac23}f(x|\theta_0)=\frac23$
 
-$\beta=1-P_{\theta_1}(x_1<\frac23)=1-\int_0^{\frac23}f(x|\theta_1)=\frac7{27}$
+Power$P_{\theta_1}(x_1<\frac23)=1-\int_0^{\frac23}f(x|\theta_1)=\frac{20}{27}$
 
 \dotfill
 
@@ -485,18 +621,36 @@ $\hat\theta_{MLE}=\frac{\sum x_i+\sum y_i}{m+n}$;
 $\hat\theta_{1}=\frac{\sum x_i}{m}$;
 $\hat\theta_{2}=\frac{\sum y_i}{n}$
 
-$T=\frac{\sum x_i}{\sum x_i+\sum y_i}\sim\frac{\Gamma(m,\theta_1)}{\Gamma(m,\theta_1)+\Gamma(n,\theta_2)}$
+$T=\frac{\sum x_i}{\sum x_i+\sum y_i}\sim\frac{\Gamma(m,\theta_1)}{\Gamma(m,\theta_1)+\Gamma(n,\theta_2)}$suff
 
-$\Lambda=\frac{(m+n)^{m+n}}{m^mn^n}T^m(1-T)^n\propto Beta(m+1,n+1)\le C'$
+$\Lambda=\frac{(m+n)^{m+n}}{m^mn^n}T^m(1-T)^n\propto B(m+1,n+1),F\le C'$
 
 \dotfill
 
 
 *$N(\mu,25)$,$H_0:\mu=50$,$H_1:\mu=55$; $Z_{0.05}=1.645$,$Z_{0.1}=1.28$;
 
-$P_{H_0}(\bar X_n\ge c)=0.05$ $P_{H_1}(\bar X_n\ge c)=0.90$
+$P_{H_0}(\bar X_n\ge c)=0.05$;$\frac{\sqrt{n}(\bar X_n-50)}{5}\ge\frac{\sqrt{n}(c-50)}{5}=Z_{\alpha}=1.645$;
 
-$n=[\frac{(Z_\alpha+Z_\beta)\sigma}{\delta=\mu_1-\mu_0}]^2=[\frac{(1.645+1.28)5}{55-50}]^2=8.56\approx9$
+$P_{H_1}(\bar X_n\ge c)=0.90$; $\frac{\sqrt{n}(\bar X_n-55)}{5}\ge\frac{\sqrt{n}(c-55)}{5}=-Z_{\beta}=-1.28$
+
+
+$n=[\frac{(Z_\alpha+Z_\beta)\sigma}{\delta=\mu_1-\mu_0}]^2=[\frac{(1.645+1.28)5}{55-50}]^2=8.56\approx9$,$c=52.74~87$
+
+\dotfill
+
+*$N(120,\sigma^2)$;
+$\Lambda$=$(\frac{\sigma_1^2}4)^{\frac{n}2}e^{(\frac1{2\sigma_1^2}-\frac18)\sum(x-120)^2}$
+T=$\sum(x-120)^2$ suff;
+
+$\sigma^2<4$ MLR $\Lambda\nearrow T\le c$, $\sigma^2>4$ MLR $\Lambda\searrow T\ge c$ 
+Under $H_0$, $\frac{T}{4}\sim\chi^2_n$
+
+\dotfill
+
+*$\bar X=6.7$,$n=18$,$\sigma=2$, $\frac{\bar x-\mu_0}{\sigma/\sqrt{n}}=1.48<1.645$
+
+If $\mu_1=7.5$, Power=$P(Z>Z_{\alpha}-\frac{\delta\sqrt{n}}{\sigma})=P(Z>1.53)=0.937$
 
 \dotfill
 
@@ -506,7 +660,7 @@ $n=[\frac{(Z_\alpha+Z_\beta)\sigma}{\delta=\mu_1-\mu_0}]^2=[\frac{(1.645+1.28)5}
 $\sqrt{\frac{m}{10}}(\bar X+3\bar Y-10\theta)\overset{\mathcal{D}}\to n(0,1)$;
 $P_{\theta_0}(\sqrt{\frac{m}{10}}(\bar X+3\bar Y-10\theta_0>Z_{\alpha})=\alpha$;
 
-$\beta=P_{\theta_1}(\sqrt{\frac{m}{10}}(\bar X+3\bar Y-10\theta_1>Z_{\alpha}-(\theta_1-\theta_0)\sqrt{10m}$
+$P_{\theta_1}(\sqrt{\frac{m}{10}}(\bar X+3\bar Y-10\theta_1>Z_{\alpha}-(\theta_1-\theta_0)\sqrt{10m})$
 
 \dotfill
 
@@ -516,14 +670,31 @@ $\Lambda=(\frac{\lambda_0}{\lambda_1})^{\sum x_i}e^{n(\lambda_1-\lambda_0)}<C$
 
 $T=\sum x_i\sim Pois(n\lambda)$; $\Lambda\searrow$ $\alpha=P_{\theta_0}(T>C)=0.05$
 
-set $\lambda=1$ $\max\Lambda$, $P_{\theta_0}(T>4)<0.05$\dotfill
+$\lambda=1$ $\max\Lambda$, $P_{\theta_0}(T\ge4)<0.05$ ifT=3let 0.019+p0.061=0.05,$p=\frac{31}{61}$
+
+\dotfill
 
 
 *$\theta x^{\theta-1}\sim Beta(\theta,1)$,$-\ln x\sim Expo(\theta)$,$-2\theta\sum\ln x\sim \Gamma(n,2),\chi^2_{2n}$
 
-$\beta=P_{\theta_1}(X>0.5)=1-\int_0^{0.5}\theta x^{\theta-1}dx=1-0.5^\theta$
+$P_{\theta_1}(X>0.5)=1-\int_0^{0.5}\theta x^{\theta-1}dx=1-0.5^\theta$
 
-$H_0:\theta=1$, $H_A :\theta>1$;$\Lambda\nearrow$ $P_{H_0}(-\ln y\le C)=\alpha$
+$H_0:\theta$=1, $H_1 :\theta>1$;$\Lambda\nearrow$ $P_{H_0}(-\ln y\le C)=\alpha$
+
+$H_0:\lambda=\frac12$, $H_1 :\lambda=1$;$P_{H_0}(-\sum\ln x\le \chi^2_{20,0.95}(10.85))=0.05$;
+
+$P_{H_1}(-2\sum\ln x\le 2*10.85)=0.64$; 
+
+
+$\hat\lambda_{mle}$$\frac{n}{T}$;$E\hat\lambda_{mle}$$\frac{n\lambda}{n-1}$;Bias$\frac{\lambda}{n-1}$;V$\frac{n^2\lambda^2}{(n-1)^2(n-2)}$;$MSE$$\frac{(n+2)\lambda^2}{(n-1)(n-2)}$;
+
+$\hat\lambda_{u}$$\frac{n-1}{T}$;
+$V\hat\theta_{u}$$\frac{\lambda^2}{n-2}$;
+$I_{\lambda}=\frac{1}{\lambda^2}$;
+effi$\frac{n-2}{n}$
+
+
+
 
 \dotfill
 
@@ -538,6 +709,8 @@ $P_{H_0}(X_{(1)}\ge C)=P_{H_0}(20Y_{(1)}\ge 20C)\overset{set}=0.05$,$20C=5.991$;
 
 $P_{H_1}(X_{(1)}\ge 0.2996)=P_{H_1}(Y_{(1)}\ge -0.7)=1$, 
 $\min\beta$ at $H_0$ is unbia
+
+A test whose power never drops below $\alpha$ is unbiased
 
 \dotfill
 
@@ -557,7 +730,7 @@ $P_{H_1}(\frac{2T}{\mu_1}\le \frac{5\chi^2_{20,0.975}}{\mu_1})+P_{H_1}(\frac{2T}
 \dotfill
 
 
-*$Unif(\theta,\theta+1)$,$H_0:\theta=0$,$f(z)=f(x_1+x_2)=z,z<1;2-z,z>1$
+*$U(\theta,\theta+1)$,$H_0:\theta=0$,$f(z)=f(x_1+x_2)=z,z<1;2-z,z>1$
 
 $\alpha=P_{H_0}(x_1+x_2>c)=P_{H_0}(x_1>0.95)$;
 
@@ -567,7 +740,7 @@ $c=\frac{2}{1}\pm\sqrt{2^2-4\cdot\frac12\cdot1.95}$, choose $2-0.3162=1.6838$
 
 
 
-**10 Consistency**\hrulefill
+\textbf{10 Consistency}\hrulefill
 
 Asym unbiased $\lim\limits_{n\to\infty}Bias(\hat\theta)=0$
 
@@ -575,27 +748,42 @@ $\lim\limits_{n\to\infty}Var_\theta[W_n]=0$, $\lim\limits_{n\to\infty}Bias_\thet
 
 $\lim\limits_{n\to\infty}P(\tau(\hat\theta_{MLE})-\tau(\theta)\ge\varepsilon)=0$
 
-**10 Efficiency**\hrulefill
+\textbf{10 Efficiency}\hrulefill
 
-$\lim\limits_{n\to\infty}\frac{CRLB}{Var(\hat\theta)}$; ARE: $\lim\limits_{n\to\infty}\frac{Var(\hat\theta_2)}{Var(\hat\theta_1)}$
+$\lim\limits_{n\to\infty}\frac{CRLB}{Var(\hat\theta)}$; $U(a,b)$, $m_n\approx N(M, \frac{1}{4nf^2(M)})$,$V[\bar X]=\frac{(b-a)^2}{12n}$,
+
+$V[m_n]=\frac{(b-a)^2}{4n}$;
+ARE of $m_n$ to $\bar X$ $=\lim\limits_{n\to\infty}\frac{V[\bar X]}{Var[m_n]}=\frac13$
+
 
 Asym effi of MLE: $\sqrt n[\tau(\hat\theta_{MLE})-\tau(\theta)]\overset{D}{\to}N(0,\frac{1}{I_{\theta}})$
+
+\hrulefill
+
+\textbf{Robust} if $l'(\theta)=\sum\psi(x_i-\theta)$ , $W(x_i-\theta)\frac{\psi(x_i-\theta)}{x-\theta}$ bounded;
+
+n()$\psi(x_i-\theta)=\frac1{\sigma^2}\times$; DE$=\frac{sgn(x-\theta)}{x-\theta}\checkmark$; Cau$=\frac{2}{1+(x-\theta)^2}\checkmark$
+
+
+
+
+\textbf{Breakdown} corrupt 1 (m) value in order to corrupt Mean(Median) Absolute Deviation $\frac{\sum_{i=1}^n|X_i-\bar X|}n$, finite breakdown point is $\frac1n(\frac{m}n)$
 
 
 **Classical**\hrulefill
 
-$f(x;\theta)=(\theta+1)x^\theta, 0<x<1$,$Beta(\theta+1,1)$;$H_0:\theta=0.5$,$H_1:\theta>0.5$
+$f(x;\theta)=(\theta+1)x^\theta, 0<x<1$,$B(\theta+1,1)$;$H_0:\theta=0.5$,$H_1:\theta>0.5$
 
-$\hat\theta_{MoM}=\frac{2\bar X-1}{1-\bar X}$;
-$\hat\theta_{MLE}=\frac{n}{-\sum\ln x_i}-1$;
-$\hat\theta_U=\frac{n-1}{-\sum\ln x_i}-1$;
+$\hat\theta_{mom}=\frac{2\bar X-1}{1-\bar X}$;
+$\hat\theta_{mle}=\frac{n}{-\sum\ln x_i}-1$;
+$\hat\theta_u=\frac{n-1}{-\sum\ln x_i}-1$;
 
 CRLB $\frac{(\theta+1)^2}{n}$;
 $\sqrt{n}(\hat\theta-\theta)\sim N(0,(\theta+1)^2)$
 
-$\Lambda=\frac{L(\theta_0)}{L(\theta_1)}=e^{(\theta_1-0.5)(-\sum x_i)}\le C$ $\nearrow$ MLR, T suff
+$\Lambda=\frac{L(\theta_0)}{L(\theta_1)}=e^{(\theta_1-0.5)(-\sum\ln x_i)}\le C$ $\nearrow$ MLR, T suff
 
-$-\ln x^\sim Expo(\theta+1)$, $-2(\theta+1)\sum\ln x\sim Gamma(n,2),\chi^2_{2n}$,$n=10$
+$-\ln x^\sim Exp(\theta+1)$, $-2(\theta+1)\sum\ln x\sim \Gamma(n,2),\chi^2_{2n}$,$n=10$
 
 $P_{H_0}(-3\sum\ln x_i\le \chi^2_{20,0.95}(10.851))=0.05$
 
@@ -603,34 +791,61 @@ $P_{H_1=1}(-4\sum\ln x_i\le\frac43* 10.851)=1-0.806$
 
 \dotfill
 
-***$f(x;\theta)=\theta(x+1)^{-\theta-1},\ x>0,\theta>2$;
-Let $y=\ln(x+1)$, $x=e^y-1$, $\frac{dx}{dy}=e^y$, $Y=\theta e^{-\theta y}\sim Expo{\theta}, Gamma(1,\frac1\theta)$
+*$f(x;\theta)=\theta(x+1)^{-\theta-1}, x>0,\theta>2$;
+Let $y=\ln(x+1)$, $x=e^y-1$, $\frac{dx}{dy}=e^y$, $Y=\theta e^{-\theta y}\sim Exp(\theta), \Gamma(1,\frac1\theta)$;
 
-$\hat\theta_{MOM}=\frac{1+\bar X}{\bar X}$;
-$\hat\theta_{MLE}=\frac{n}{\sum\ln(x+1)}$
-$\hat\theta_{U}=\frac{n-1}{\sum\ln(x+1)}$
-$CRLB=\frac{\theta^2}{n}$
-
-
-$E[\hat\theta_{MLE}]=\frac{n\theta}{n-1}$, $Bias=\frac{\theta}{n-1}$;
-$E[\hat\theta_{MLE}^2]=\frac{n^2\theta^2}{(n-1)(n-2)}$; 
-$V[\hat\theta_{MLE}]=\frac{n^2\theta^2}{(n-1)^2(n-2)}$;
-$MSE=\frac{n+1}{(n-1)^2}\theta^2$;
-
+$\hat\theta_{u}$$\frac{n-1}{\sum\ln(x+1)}$;$V\hat\theta_{u}$$\frac{\theta^2}{n-2}$;
+CRLB$\frac{\theta^2}{n}$
 $\lim\limits_{n\to\infty}\frac{CRLB}{V\hat\theta_{U}}=\lim\limits_{n\to\infty}\frac{n-2}{n}=1$
+
+
+$\hat\theta_{mle}$$\frac{n}{\sum\ln(x+1)}$;$E[\hat\theta_{mle}]$$\frac{n\theta}{n-1}$, $Bias$$\frac{\theta}{n-1}$;
+$E[\hat\theta_{mle}^2]$$\frac{n^2\theta^2}{(n-1)(n-2)}$; 
+$V[\hat\theta_{mle}]$$\frac{n^2\theta^2}{(n-1)^2(n-2)}$;
+$MSE$$\frac{(n+2)\theta^2}{(n-1)(n-2)}$;
+
 
 $H_0:\theta=3$,$H_1:\theta=4$$P_{H_0}(6\sum\ln(x+1)<\chi^2_{2n,\alpha})=\alpha$ is UMP
 
 \dotfill
 
+,$\theta x^{-\theta-1}, x>1$
 
-$f(x,y)=6(y-x)$,$0<x<y<1$,$Z=\frac{X+Y}2$,$W=Y$; $z<w<2z$;
+EX=$\int_0^{\infty}f_X=\frac1{\theta-1}$,$\int_1^{\infty}f_X=1+\frac1{\theta-1}=\mu$; 
+
+$\hat\theta_{mom}=1+\frac{1}{\bar X}$,$1+\frac{1}{\bar X-1}=g(\bar x)$;
+
+VX=$\frac{\theta}{(\theta-1)^2(\theta-2)}=\sigma^2$;
+$\sqrt n[\bar x-\mu]\overset{D}{\to}N(0,\sigma^2)$
+
+$g(\mu)=1+\frac{1}{\mu},$$1+\frac{1}{\mu-1}=\theta$;
+$g'(\mu)=\frac{-1}{\mu^2},$$\frac{-1}{(\mu-1)^2}=-(\theta-1)^2\neq0$
+
+$\sqrt n[\hat\theta_{mom}-\theta-\frac{\theta(\theta-1)}{n(\theta-2)}]\overset{D}{\to}N(0,\frac{\theta(\theta-1)^2}{(\theta-2)})$
+
+$\hat\theta_{mom}=\frac{\bar x}{\bar x-1}\approx \frac{\mu}{\mu-1}+\frac{-1}{(\mu-1)^2}(\bar x-\mu)+\frac{1}{(\mu-1)^3}(\bar x-\mu)^2$
+
+$E[\hat\theta_{mom}]\approx \frac{\mu}{\mu-1}+0+\frac{1}{(\mu-1)^3}\frac{\sigma^2}n=\theta+\frac{\theta(\theta-1)}{n(\theta-2)}$
+
+$V[\hat\theta_{mom}]\approx V[\frac{\mu}{\mu-1}+\frac{1}{(\mu-1)^2}(\bar x-\mu)]=\frac{\theta(\theta-1)^2}{n(\theta-2)}$
+
+\dotfill
+
+*$f(x,y)=6(y-x)$,$0<x<y<1$,$Z=\frac{X+Y}2$,$W=Y$; $z<w<2z$;
 
 $|J|=2$,$g(z,w)=24(w-z)$,$g(z)=\int_{z}^{2z}g(z,w)dw=12z^2, 0<z<\frac12$;
 $f_{Z}(z)=\int_{z}^{1}g(z,w)dw=12(z-1)^2, \frac12<z<1$
 
 \dotfill
 
+*$f(x,y)=c(x+2y)$,$y\in(0,1)$,$x\in(0,2)$;c=$\frac14$;
+$f_X=\frac14(x+1)$,0,o.w.
+
+$F=\begin{cases}0,y\le0,x\le0&1,y\ge1,x\ge2 \\\int_0^x\int_0^ydydx=\frac{x^2y}8+\frac{xy^2}4&y\in(0,1),x\in(0,2)\\\int_0^2\int_0^ydydx=\frac{y^2}2+\frac{y}2&y\in(0,1),2\le x\\\int_0^x\int_0^1dydx=\frac{x^2}8+\frac{x}{4}&1\le y,x\in(0,2) \end{cases}$
+
+$Z=\frac{9}{(X+1)^2}$,$f_Z=\frac98z^{-2},z\in(1,9)$,0,o.w.
+
+\dotfill
 
 *$f(y_1,y_2)=c(1-y_2)$,$0\le y1\le y2\le 1$;$\int_0^1\int_0^{y_2}dy_1dy_2=1$, $c=6$;
 
@@ -641,8 +856,6 @@ $f(y_2)=\int_0^{y_2}dy_1=6(y_2-y_2^2)$
 
 $=\frac{\int_0^{\frac12}\int_0^{y_2}f(,)dy_1dy_2+\int_{\frac12}^{\frac34}\int_0^{\frac12}f(,)dy_1dy_2}{\int_{0}^{3/4}f_{Y_2}(y_2)dy_2}=\frac{25/32}{27/32}=25/27$
 
-
-
 \dotfill
 
 
@@ -651,7 +864,7 @@ $\int_0^1\int_0^{y_2}$;
 
 $f_{Y_1}=2-2y_1$;$f_{Y_2}=2y_2$
 
-$E[Y_1+Y_2]=\int_0^1y_1(2-2y_1)dy_1+\int_0^1y_2(2y_2)dy_2=\frac13+\frac12=1$
+$E[Y_1+Y_2]=\int_0^1y_1(2-2y_1)dy_1+\int_0^1y_2(2y_2)dy_2=\frac13+\frac23=1$
 
 $P(Y_1\le\frac34|Y_1>\frac13)=\frac{\int_{1/3}^{3/4}}{1-\int_0^{1/3}}=\frac{55}{64}$
 
@@ -667,6 +880,15 @@ $f(x)=\int_0^{2-x}f(x,y)dy=\frac34x(x-2)^2$; $f(y)$same
 $P(X<Y)=P(X<Y,Y<1)+P(X<Y,Y>1)=P(X<Y<1)+P(X<2-Y,1<Y<2)$
 $=\int_0^1\int_0^{y}dxdy+\int_1^2\int_0^{2-y}dxdy=\frac12$
 
+\dotfill
+
+*$f_X$=$3kxe^{-3x^2}$; k=2; m=$\sqrt\frac{\ln2}{3}$; $f_X'$=0,mode=$\frac1{\sqrt6}$
+Y=$X^2$, $f_Y$=$3e^{-3y}$
+
+
+
+
+
 \end{multicols}
 
 \newpage
@@ -677,32 +899,54 @@ $=\int_0^1\int_0^{y}dxdy+\int_1^2\int_0^{2-y}dxdy=\frac12$
 \fontsize{6pt}{0pt}
 \scriptsize
 
-\begin{tabular}{ l|p{0.18\linewidth}|l|p{0.2\linewidth}|p{0.2\linewidth} }
+\begin{tabular}{ l|l|l|p{0.2\linewidth}|l }
    $D$   &$E;EX^2;V$&$f(x);F(x),P(X\le x)$&$MLE;T;I$&$M_x(t);M'(t);M''(t);M^n(t)$\\\hline
-$Bern(p)$&$p$;$p$;$pq$&$p^xq^{1-x},x=1,0$&$\bar X$;$\sum x_i\sim Bino(n,p)$;$1/pq$&$pe^t+q$\\\hline
-$Bino(n,p)$&$np$;$np(np+q)$;$npq$&$\binom{n}{x}p^x q^{n-x}$,$x=0,1..n$;&$\bar X$or$k\ge X_{(n)}$;$\sum x_i\sim Bino(n,p)$;$1/pq$&$(pe^t+q)^n$\\\hline
-$Geom(p)$&$1/p$;${(p+2q)}/{p^2}$;$q/p^2$&$pq^{x-1}$,$x=1,2,..$;$1-q^x$&$1/\bar X$;$\sum x_i$;&$\frac{pe^t}{1-qe^t},t<-\ln{q}$;$\frac{pqe^t}{(1-qe^t)^2}$;$\frac{2pqe^t}{(1-qe^t)^3}-M'(t)$\\\hline
-$NBino(r,p)$&$r/p$; ;$rq/p^2$&$\binom{x-1}{r-1}p^rq^{x-r}$,$x=r,r+1..$&$\bar X$;$\sum x_i$&$(\frac{pe^t}{1-qe^t})^r,t<\ln q$\\\hline
-$HGeom(N,m,k)$&$\frac{km}N$; ;$\mu\frac{(N-m)(N-k)}{N(N-1)}$&${\binom{m}{x}\binom{N-m}{k-x}}/{\binom{N}{k}}$\\\hline
-$Pois(\mu)$&$\mu$;$\mu$;$\mu^2+\mu$&$\frac{\mu^x}{x!}e^{-\mu}$,$x=0,1..$;$e^{-\mu}\sum_{i=0}^x\frac{\mu^i}{i!}$&$\bar X$;$\sum x_i$;$1/\mu$&$e^{\mu(e^t-1)}$;$\mu e^tM(t)$;$\mu e^t(1+\mu e^t)M(t)$\\\hline
-$Unif(n)$&$\frac{n+1}2$;$\frac{(n+1)(2n+1)}{6}$;$\frac{n^2-1}{12}$&$\frac{1}n$,$x=1,2..n$,$n=b-a+1$;$\frac{x-a+1}n$&;$X_n$Comp&$\frac1n\sum_{i=1}^n{e^{ti}}$,$\frac{e^{at}-e^{(b+1)t}}{n(1-e^t)}$\\\hline
-$Unif(a,b)$&$\frac{a+b}{2}$; ;$\frac{(b-a)^2}{12}$&$\frac{1}{b-a}$,$x\in(a,b)$;$\frac{x-a}{b-a}$&$\min{x_{(1)},x_{(n)}}$;R ancillary&$\frac{e^{tb}-e^{ta}}{t(b-a)}$\\\hline
-$Norm(\mu,\sigma^2)$&$\mu$;$\mu^2+\sigma^2$;$\sigma^2$&$\frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$&&$e^{\mu t +\frac{\sigma^2t^2}2}$; $(\mu+\sigma^2t)M(t)$;$[(\mu+\sigma^2t)^2+\sigma^2]M(t)$\\\hline
-$SNorm(0,1)$&$0$;$1$;$1$&$\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}2}$&&$e^{\frac{t^2}2}$\\\hline
-$LNorm(\mu,\sigma^2)$&$e^{\mu+\frac{\sigma^2}2}$;$e^{2\mu+2\sigma^2}$;$E^2X(e^{\sigma^2}-1)$&$\frac{1}{x\sigma \sqrt{2\pi}}e^{\frac{-(\ln x-\mu)^2}{2\sigma^2}}$&$\hat\mu=\frac1n\sum\ln x_i$,$\hat\sigma^2=\frac1n\sum\ln(x_i-\hat\mu)^2$&$EX^n=e^{n\mu+n^2\sigma^2/2}$\\\hline
-$Cauchy(\theta,\sigma^2)$&&$\frac{1}{\pi\sigma}\frac1{1+(\frac{x-\theta}{\sigma})^2}$&&\\\hline
-$DExpo(\mu,\sigma^2)$&$\mu$;$\mu^2+2\sigma^2$;$2\sigma^2$&$\frac{1}{2\sigma} e^{-|\frac{x-\mu}{\sigma}|}$&$\hat\mu=median$,$\hat\sigma=\frac1n\sum|x_i|$&$\frac{e^{\mu t}}{1-\sigma^2t^2}$\\\hline
-$Expo(\beta)$&$\beta$; ;$\beta^2$&$\frac1{\beta} e^{-\frac{x}\beta},x \in (0,\infty)$;$1-e^{-\lambda x}$&$1/\bar X$;$\sum x_i$;mean$^2$&$\frac{\lambda}{\lambda-t},t<\lambda$,$\frac{1}{1-\beta t}$;$\beta(1-\beta t)^{-2}$;$2\beta^2(1-\beta t)^{-3}$\\\hline
-$Gamm(\alpha,\beta)$&$\alpha\beta$; ;$\alpha\beta^2$;&$\frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-x/\beta}$&$\prod x_i$,$\sum x_i$&$(\frac{1}{1-\beta t})^a, t <\frac1\beta$;$EX^n=\frac{\beta^n\Gamma(\alpha+n)}{\Gamma\alpha}$\\\hline
-$Beta(a,b)$&$\frac{a}{a+b}$;$\frac{a(a+1)}{(a+b)(a+b+1)}$;$\frac{ab}{(a+b)^2(a+b+1)}$&$\frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)}x^{a-1}(1-x)^{b-1}$&&$B(\alpha,\beta)=\frac{\Gamma(\alpha)\Gamma(\beta)}{\Gamma(\alpha+\beta)}$,$x\in(0,1)$;$\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)}$\\\hline
-$\chi_p^2$&$p$;$2p+p^2$;$2p$&$\frac{1}{\Gamma \frac{p}2 2^{\frac{p}2}}x^{\frac{p}2-1}e^{-\frac{x}2}$&;$\sum\ln x_i$;&$(1-2t)^{-p/2}, t<\frac12$\\\hline
-$t_p$&$0,p>1$; ;$\frac{p}{p-2},p>2$&$\frac{\Gamma(\frac{p+1}2)}{\Gamma(\frac{p}2)\sqrt{p\pi}}(1+\frac{x^2}{p})^{-\frac{p+1}2}$
-$F$&$\frac{q}{q-2},q>2$;;$2(\frac{q}{q-2})^2\frac{p+q-2}{p(q-4)},q>4$&$\frac{\Gamma(\frac{p+q}2)}{\Gamma(\frac{p}2)\Gamma (\frac{q}2)}(\frac{p}q)^{\frac{p}2}\frac{x^{\frac{p}2-1}}{(1+\frac{p}qx)^{\frac{p+q}2}}$,$x>0$\\\hline
-$Arcsine$&$\frac{1}2$; ;$\frac{1}8$&$\frac{1}{\pi\sqrt{x(1-x)}}$,$x\in[0,1]$;$\frac{1}{\pi\arcsin\sqrt x}$&&$Beta(\frac{1}2,\frac{1}2)$\\\hline
-$Dirichlet$&$\frac{a_i}{\sum_ka_k}$$\sum_{i=1}^kx_i=1$;;$\frac{a_i(a_0-a_i)}{a_0^2(a_0+1)}$&$\frac1{B(a)}\Pi_{i=1}^kx_i^{a_i-1}$,$x\in(0,1)$,$B(a)=\frac{\Pi_{i=1}^k\Gamma(a_i)}{\Gamma(\sum_{i=1}^ka_i)}$&&$Cov(X_i,X_j)=\frac{-a_ia_j}{a_0^2(a_0+1)}$,$a_0=\sum_{i=1}^ka_i$\\\hline
-$Weibull(\gamma,\beta)$&\shortstack{$\beta^{1/\gamma}\Gamma(1+1/\gamma)$;;\\$\beta^{2/\gamma}[\Gamma(1+2/\gamma)-\Gamma^2(1+1/\gamma)]$}&$\frac\gamma\beta x^{\gamma-1}e^{-\frac{x^\gamma}\beta}$;$1-e^{-(\frac{x}\beta)^\gamma}$&$x^\gamma$,$\sum x^\gamma$,$\sum\ln x$&;;$\beta^{\frac{n}\gamma}\Gamma(1+\frac{n}\gamma)$\\\hline
+   
+$Bern(p)$&$p$;$p$;$pq$&$p^xq^{1-x},x=1,0;0\le p\le1$&\shortstack{$\bar X$;$\sum x_i\sim Bin(n,p)$;$\frac1{pq}$;\\$Ep_{mle}=p$,$Vp_{mle}=\frac{pq}{n}$}&$pe^t+q$\\\hline
 
-$Pareto(\alpha,\beta)$&$\frac{\beta\alpha}{\beta-1}$,$\beta>1$;;$\frac{\beta\alpha^2}{(\beta-1)^2(\beta-2)}$,$\beta>2$&$\frac{\beta\alpha^\beta}{x^{\beta+1}}$;$1-(\frac{\alpha}{x})^\beta$,$x\ge\alpha$&\shortstack{$\hat\alpha=\min x_i$,$\hat\beta=\frac{n}{\sum\ln(x_i/x_{(1)})}$;\\$\sum x_i$comp/suff;$1/\beta^2$}&
+$Bino(n,p)$&$np$;$np(np+q)$;$npq$&$\binom{n}{x}p^x q^{n-x}$,$x=0,1..n;0\le p\le1$;&$\bar X$or$k\ge X_{(n)}$;$\sum x_i\sim Bino(n,p)$;$1/pq$&$(pe^t+q)^n$\\\hline
+
+$Geom(p)$&$1/p$;${(p+2q)}/{p^2}$;$q/p^2$&$pq^{x-1}$,$x=1,2,..;0\le p\le1$;$1-q^x$&$1/\bar X$;$\sum x_i$;&$\frac{pe^t}{1-qe^t},t<-\ln{q}$;$\frac{pqe^t}{(1-qe^t)^2}$;$\frac{2pqe^t}{(1-qe^t)^3}-M'(t)$\\\hline
+
+$NBino(r,p)$&$r/p$; ;$rq/p^2$;$0\le p\le1$&$\binom{x-1}{r-1}p^rq^{x-r}$,$x=r,r+1..$&$\bar X$;$\sum x_i$&$(\frac{pe^t}{1-qe^t})^r,t<\ln q$\\\hline
+
+$HGeom(N,m,k)$&$\frac{km}N$;;$\mu\frac{(N-m)(N-k)}{N(N-1)}$;$N,m,k\ge0$ &${\binom{m}{x}\binom{N-m}{k-x}}/{\binom{N}{k}}$;&$m-(N-k)\le x\le m$\\\hline
+
+$Pois(\mu)$&$\mu$;$\mu^2+\mu$;$\mu$;$\mu\ge0$&$\frac{\mu^x}{x!}e^{-\mu}$,$x=0,1..$;$e^{-\mu}\sum_{i=0}^x\frac{\mu^i}{i!}$&$\bar X$;$\sum x_i$;$\frac1\mu$;$P(x+1)=\frac\lambda{\lambda+1}P(x)$&$e^{\mu(e^t-1)}$;$\mu e^tM(t)$;$\mu e^t(1+\mu e^t)M(t)$\\\hline
+
+$Unif(n)$&$\frac{n+1}2$;$\frac{(n+1)(2n+1)}{6}$;$\frac{n^2-1}{12}$&$\frac{1}n$,$x=1,2..n$,$n=b-a+1$;$\frac{x-a+1}n$&;$X_n$Comp&$\frac1n\sum_{i=1}^n{e^{ti}}$,$\frac{e^{at}-e^{(b+1)t}}{n(1-e^t)}$\\\hline
+
+$Unif(a,b)$&$\frac{a+b}{2}$; ;$\frac{(b-a)^2}{12}$&$\frac{1}{b-a}$,$a\le x\le b$;$\frac{x-a}{b-a}$&$\min{x_{(1)},x_{(n)}}$;R ancillary&$\frac{e^{tb}-e^{ta}}{t(b-a)}$\\\hline
+
+$Norm(\mu,\sigma^2)$&$\mu$;$\mu^2+\sigma^2$;$\sigma^2$&$\frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$,$\sigma>0$&\shortstack{$\bar X$,$\frac{\sum(x_i-\bar x)^2}n$;;$I_\mu=\frac1{\sigma^2}$,$I_{\sigma^2}=\frac1{2\sigma^4}$,$I_{\sigma}=\frac2{\sigma^2}$\\$E\hat\sigma^2_{mle}=\frac{(n-1)\sigma^2}{n}$,$V\hat\sigma_{mle}=\frac{2(n-1)\sigma^4}{n^2}$} &$e^{\mu t +\frac{\sigma^2t^2}2}$; $(\mu+\sigma^2t)M(t)$;$[(\mu+\sigma^2t)^2+\sigma^2]M(t)$\\\hline
+
+$SNorm(0,1)$&$0$;$1$;$1$&$\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}2}$&&$e^{\frac{t^2}2}$\\\hline
+
+$LNorm(\mu,\sigma^2)$&$e^{\mu+\frac{\sigma^2}2}$;$e^{2\mu+2\sigma^2}$;$E^2X(e^{\sigma^2}-1)$&$\frac{1}{x\sigma \sqrt{2\pi}}e^{\frac{-(\ln x-\mu)^2}{2\sigma^2}}$,$x\ge0$,$\sigma>0$&$\hat\mu=\frac1n\sum\ln x_i$,$\hat\sigma^2=\frac1n\sum\ln(x_i-\hat\mu)^2$&$EX^n=e^{n\mu+n^2\sigma^2/2}$\\\hline
+
+$Cauchy(\theta,\sigma)$&&$\frac{1}{\pi\sigma}\frac1{1+(\frac{x-\theta}{\sigma})^2}$;;$\sigma>0$&=$t_1$;=$\frac{Z_1}{Z_2}$&\\\hline
+
+$DExpo(\mu,\sigma^2)$&$\mu$;$\mu^2+2\sigma^2$;$2\sigma^2$&$\frac{1}{2\sigma} e^{-|\frac{x-\mu}{\sigma}|}$,$\sigma>0$;&$\hat\mu=median$,$\hat\sigma=\frac1n\sum|x_i|$&$\frac{e^{\mu t}}{1-\sigma^2t^2}$\\\hline
+
+$Expo(\beta)$&$\beta$; ;$\beta^2$,$\beta>0$&$\frac1{\beta} e^{-\frac{x}\beta},x\ge0$;$1-e^{-\lambda x}$&\shortstack{$\frac1{\bar X}$;$\sum x_i$;$\frac1{\lambda^2}$;$E\lambda_{mle}=\frac{\lambda}{n-1}$,\\$V\lambda_{mle}=\frac{n^2\lambda^2}{(n-1)^2(n-2)}$,$V\lambda_{u}=\frac{\lambda^2}{n-2}$}&$\frac{\lambda}{\lambda-t},t<\lambda$,$\frac{1}{1-\beta t}$;$\frac{\beta}{(1-\beta t)^2}$;$\frac{2\beta^2}{(1-\beta t)^3}$\\\hline
+
+$Gamm(\alpha,\beta)$&$\alpha\beta$; ;$\alpha\beta^2$;$\alpha,\beta>0$&$\frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-x/\beta}$,$x\ge0$&$\prod x_i$,$\sum x_i$&$(\frac{1}{1-\beta t})^a, t <\frac1\beta$;$EX^n=\frac{\beta^n\Gamma(\alpha+n)}{\Gamma\alpha}$\\\hline
+
+$Beta(a,b)$&$\frac{a}{a+b}$;$\frac{a(a+1)}{(a+b)(a+b+1)}$;$\frac{ab}{(a+b)^2(a+b+1)}$&$\frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)}x^{a-1}(1-x)^{b-1}$;$0\le x\le1$&$\alpha>0,\beta>0$&$B(\alpha,\beta)=\frac{\Gamma(\alpha)\Gamma(\beta)}{\Gamma(\alpha+\beta)}$,$x\in(0,1)$;$\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)}$\\\hline
+
+$\chi_p^2$&$p$;$2p+p^2$;$2p$&$\frac{1}{\Gamma \frac{p}2 2^{\frac{p}2}}x^{\frac{p}2-1}e^{-\frac{x}2}$,$x\ge0;p=1,2..$&;$\sum\ln x_i$;&$(1-2t)^{-p/2}, t<\frac12$\\\hline
+
+$t_p$&$0,p>1$; ;$\frac{p}{p-2},p>2$&$\frac{\Gamma(\frac{p+1}2)}{\Gamma(\frac{p}2)\sqrt{p\pi}}(1+\frac{x^2}{p})^{-\frac{p+1}2}$&\\\hline
+
+$F_{p,q}$&$\frac{q}{q-2},q>2$;;$2(\frac{q}{q-2})^2\frac{p+q-2}{p(q-4)},q>4$&$\frac{\Gamma(\frac{p+q}2)}{\Gamma(\frac{p}2)\Gamma (\frac{q}2)}(\frac{p}q)^{\frac{p}2}\frac{x^{\frac{p}2-1}}{(1+\frac{p}qx)^{\frac{p+q}2}}$,$x\ge0$&$F_{p,q}=\frac{\chi^2_p/p}{\chi^2_q/q}$;$F_{1,q}=t_q^2$&\\\hline
+
+$Arcsine$&$\frac{1}2$; ;$\frac{1}8$&$\frac{1}{\pi\sqrt{x(1-x)}}$,$x\in[0,1]$;$\frac{1}{\pi\arcsin\sqrt x}$&&$Beta(\frac{1}2,\frac{1}2)$\\\hline
+
+$Dirichlet$&$\frac{a_i}{\sum_ka_k}$$\sum_{i=1}^kx_i=1$;;$\frac{a_i(a_0-a_i)}{a_0^2(a_0+1)}$&$\frac1{B(a)}\Pi_{i=1}^kx_i^{a_i-1}$,$x\in(0,1)$&$B(a)=\frac{\Pi_{i=1}^k\Gamma(a_i)}{\Gamma(\sum_{i=1}^ka_i)}$&$Cov(X_i,X_j)=\frac{-a_ia_j}{a_0^2(a_0+1)}$,$a_0=\sum_{i=1}^ka_i$\\\hline
+
+$Weibull(\gamma,\beta)$&\shortstack{$\beta^{1/\gamma}\Gamma(1+1/\gamma)$;;\\$\beta^{2/\gamma}[\Gamma(1+2/\gamma)-\Gamma^2(1+1/\gamma)]$}&\shortstack{$\frac\gamma\beta x^{\gamma-1}e^{-\frac{x^\gamma}\beta}$,$x\ge0$,$\gamma>0,\beta>0$;\\$1-e^{-(\frac{x}\beta)^\gamma}$}&$x^\gamma$,$\sum x^\gamma$,$\sum\ln x$&;;$\beta^{\frac{n}\gamma}\Gamma(1+\frac{n}\gamma)$\\\hline
+
+$Pareto(\alpha,\beta)$&$\frac{\beta\alpha}{\beta-1}$,$\beta>1$;;$\frac{\beta\alpha^2}{(\beta-1)^2(\beta-2)}$,$\beta>2$&$\frac{\beta\alpha^\beta}{x^{\beta+1}}$;$1-(\frac{\alpha}{x})^\beta$,$x>\alpha$,$\alpha,\beta>0$&\shortstack{$\hat\alpha=\min x_i$,$\hat\beta=\frac{n}{\sum\ln(x_i/x_{(1)})}$;\\$\sum x_i$comp/suff;$1/\beta^2$}&
 \end{tabular}
 
 
