--- a/static/stat566/qe_applied_stat_inclass.Rmd
+++ b/static/stat566/qe_applied_stat_inclass.Rmd
@@ -84,6 +84,26 @@ $\hat\beta_0=\hat\beta_1=\frac{\sum_{i=1}^n(1+x_i)y_i\sum_{i=1}^nx_i^4-\sum_{i=1
 \begin{multicols}{2}
 You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only eight runs can be done on a given day, so you will have to conduct the experiment in 2 blocks. You may assume that 4-way and higher interactions are not important.
 
+\begin{tabular}{ l|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c }
+&A&B&{\tiny AB}&C&{\tiny AC}&{\tiny BC}&{\tiny \shortstack{AB\\C}}&D&{\tiny AD}&{\tiny BD}&{\tiny \shortstack{AB\\D}}&{\tiny CD}&{\tiny \shortstack{AC\\D}}&{\tiny \shortstack{BC\\D}}&{\tiny \shortstack{AB\\CD}}\\
+(1)&-&-&+&-&+&+&-&-&+&+&-&+&-&-&+\\
+a&+&-&-&-&-&+&+&-&-&+&+&+&+&-&-\\
+b&-&+&-&-&+&-&+&-&+&-&+&+&-&+&-\\
+ab&+&+&+&-&-&-&-&-&-&-&-&+&+&+&+\\
+c&-&-&+&+&-&-&+&-&+&+&-&-&+&+&-\\
+ac&+&-&-&+&+&-&-&-&-&+&+&-&-&+&+\\
+bc&-&+&-&+&-&+&-&-&+&-&+&-&+&-&+\\
+abc&+&+&+&+&+&+&+&-&-&-&-&-&-&-&-\\
+d&-&-&+&-&+&+&-&+&-&-&+&-&+&+&-\\
+ad&+&-&-&-&-&+&+&+&+&-&-&-&-&+&+\\
+bd&-&+&-&-&+&-&+&+&-&+&-&-&+&-&+\\
+abd&+&+&+&-&-&-&-&+&+&+&+&-&-&-&-\\
+cd&-&-&+&+&-&-&+&+&-&-&+&+&-&-&+\\
+acd&+&-&-&+&+&-&-&+&+&-&-&+&+&-&-\\
+bcd&-&+&-&+&-&+&-&+&-&+&-&+&-&+&-\\
+abcd&+&+&+&+&+&+&+&+&+&+&+&+&+&+&+
+\end{tabular}
+
 Show all of the following:
 
  - all of your generators (make sure that your resolution is at least III)
@@ -93,66 +113,76 @@ I=ABCE=BCDF=ADEF
 
  - the 16 runs to conduct
 
- - - - - - - ------ -
- A B C D E F Run    Block
+\begin{tabular}{ c|c|c|c|c|c|c|c|l }
+A & B & C & D & E & F &{\scriptsize ABF}&{\scriptsize ABD}& Run\\
+- & - & - & - & - & - & -   & -   & (1) \\
++ & - & - & - & + & - & +   & +   & ae  \\
+- & + & - & - & + & + & -   & +   & bef \\
++ & + & - & - & - & + & +   & -   & abf \\
+- & - & + & - & + & + & +   & -   & cef \\
++ & - & + & - & - & + & -   & +   & acf \\
+- & + & + & - & - & - & +   & +   & bc  \\
++ & + & + & - & + & - & -   & -   & abce\\
+- & - & - & + & - & + & +   & +   & df  \\
++ & - & - & + & + & + & -   & -   & adef\\
+- & + & - & + & + & - & +   & -   & bde \\
++ & + & - & + & - & - & -   & +   & abd \\
+- & - & + & + & + & - & -   & +   & cde \\
++ & - & + & + & - & - & +   & -   & acd \\
+- & + & + & + & - & + & -   & -   & bcdf\\
++ & + & + & + & + & + & +   & +   & abcdef
+\end{tabular}
+
+
  
- - - - - - - (1)    1
- 
- + - - - + - ae     1
- 
- - + - - + + bef    2
- 
- + + - - - + abf    2
- 
- - - + - + + cef    2
- 
- + - + - - + acf    2
- 
- - + + - - - bc     1
- 
- + + + - + - abce   1
- 
- - - - + - + df     1
- 
- + - - + + + adef   1
- 
- - + - + + - bde    2
- 
- + + - + - - abd    2
- 
- - - + + + - cde    2
- 
- + - + + - - acd    2
- 
- - + + + - + bcdf   1
- 
- + + + + + + abcdef 1
- --------------------
- 
-E=ABC; F=BCD; Block=ABCDEF
+E=ABC; F=BCD; Block=ABF
  
  - the alias structure
  
-A=BCE=DEF; B=CDF=ACE; C=ABE=BDF; D=BCF=AEF; E=ABC=ADF; F=BCD=ADE;
+A = BCE = DEF = ABCDF;
 
-AB=CE; AC=BE; AD=EF; AE=BC=DF=ABCDEF; AF=DE; BD=CF; BF=CD;
+B = ACE = CDF = ABDEF;
 
-ABD=CDE=ACF=BEF; ACD=BDE=ABF=CEF 
+C = ABE = BDF = ACDEF;
+
+D = BCF = AEF = ABCDE;
+
+E = ABC = ADF = BCDEF;
+
+F = BCD = ADE = ABCEF;
+
+BF = CD = ACEF = ABDE;
+
+AB = CE = ACDF = BDEF;
+
+AC = BE = ABDF = CDEF;
+
+AD = EF = BCDE = ABCF;
+
+AE = BC = DF = ABCDEF;
+
+AF = DE = BCEF = ABCD;
+
+BD = CF = ACDE = ABEF;
+
+ABD = CDE = ACF = BEF;
+
+ACD = BDE = ABF = CEF;
  
  - the eight runs to be done on each day
  
-Day1: (1), abce, bcdf, adef, ae, bc, df, abcdef
+Day1: (1), abce, bcdf, adef, abd, cde, acf, bef
 
-Day2: abd, cde, acf, bef, abf, cef, acd, bde
+Day2: ae, bc, df, abcdef, abf, cef, acd, bde
  
  - the effects to be confounded with blocks
  
-AE=BC=DF=ABCDEF
+ACD=BDE=ABF=CEF 
 
  - the Source and DF columns of the ANOVA table
 
  - - - - - - -  -  -  -  -  -  -   -   -
- A B C D E F AB AC AD AF BD BF ABD ABF Block
+ A B C D E F AB AC AD AE AF BD BF ABD  Block
 
  1 1 1 1 1 1 1  1  1  1  1  1  1   1   1
  ---------------------------------------
@@ -222,9 +252,10 @@ Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$
 
 Let $SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\beta_0-\beta_1x_i-\beta_2x_i^2)^2=\sum_{i=1}^n(y_i-\beta_0-2\beta_0x_i^2)^2$
 
-$\frac{\partial SSE}{\partial\beta_0}=2\sum_{i=1}^n(y_i-\beta_0-2\beta_0x_i^2)(-2x_i^2)\overset{set}{=}0$;
-$\hat\beta_0=\frac{\sum_{i=1}^nx_i^2y_i}{\sum_{i=1}^nx_i^2+2\sum_{i=1}^nx_i^4}$
-$\hat\beta_2=\frac{2\sum_{i=1}^nx_i^2y_i}{\sum_{i=1}^nx_i^2+2\sum_{i=1}^nx_i^4}$
+$\frac{\partial SSE}{\partial\beta_0}=2\sum_{i=1}^n(y_i-\beta_0-2\beta_0x_i^2)(-1-2x_i^2)\overset{set}{=}0$;
+
+$\hat\beta_0=\frac{\sum_{i=1}^ny_i(1+2x_i^2)}{\sum_{i=1}^n(1+2x_i^2)^2}$;
+$\hat\beta_2=\frac{2\sum_{i=1}^ny_i(1+2x_i^2)}{\sum_{i=1}^n(1+2x_i^2)^2}$
 
 \end{multicols}
 
@@ -244,43 +275,27 @@ Show all of the following:
 $2^{6-2}_{IV}$ E=ABC, F=BCD;
 I=ABCE=BCDF=ADEF
  
- - the 16 runs to conduct  E=ABC; F=BCD; Block=ACD  
+ - the 16 runs to conduct  E=ABC; F=BCD; Block=ABD  
  
- - - - - - - --- --- ------ -
- A B C D E F ACD ABD Run    
- 
- - - - - - - -   -   (1)    4
- 
- - - - + - + +   +   df     1
- 
- - - + - + + +   -   cef    2
-
- - - + + + - -   +   cde    3 
- 
- - + - - + + -   +   bef    3 
- 
- - + - + + - +   -   bde    2
- 
- - + + - - - +   +   bc     1 
- 
- - + + + - + -   -   bcdf   4
- 
- + - - - + - +   +   ae     1
- 
- + - - + + + -   -   adef   4
- 
- + - + - - + -   +   acf    3 
- 
- + - + + - - +   -   acd    2 
- 
- + + - - - + +   -   abf    2
- 
- + + - + - - -   +   abd    3
- 
- + + + - + - -   -   abce   4
- 
- + + + + + + +   +   abcdef 1
- ----------------------------
+\begin{tabular}{ l|l|l|l||l|l|l|l|l|l|l }
+A & B & C & D & E & F & ACD & ABD & Run\\
+- & - & - & - & - & - &  -  &  -  & (1) & 4\\
+- & - & - & + & - & + &  +  &  +  & df  & 1\\
+- & - & + & - & + & + &  +  &  -  & cef & 2\\
+- & - & + & + & + & - &  -  &  +  & cde & 3\\
+- & + & - & - & + & + &  -  &  +  & bef & 3\\
+- & + & - & + & + & - &  +  &  -  & bde & 2\\
+- & + & + & - & - & - &  +  &  +  & bc  & 1\\
+- & + & + & + & - & + &  -  &  -  & bcdf &4\\
++ & - & - & - & + & - &  +  &  +  & ae  & 1\\
++ & - & - & + & + & + &  -  &  -  & adef& 4\\
++ & - & + & - & - & + &  -  &  +  & acf & 3\\
++ & - & + & + & - & - &  +  &  -  & acd & 2\\
++ & + & - & - & - & + &  +  &  -  & abf & 2\\
++ & + & - & + & - & - &  -  &  +  & abd & 3\\
++ & + & + & - & + & - &  -  &  -  & abce& 4\\
++ & + & + & + & + & + &  +  &  +  & abcdef&1
+\end{tabular}
  
  - the alias structure
  
@@ -593,7 +608,8 @@ $8.1556\pm t(0.005,9)\sqrt{8.84355*0.2483463917}$, $8.1556\pm3.25\times4.407127$
 
 (e) Give an unbiased estimate of the variance of $\hat\beta_1-\hat\beta_2$.
 
-$Var(\hat\beta_1-\hat\beta_2)=Var(\hat\beta_1)+Var(\hat\beta_2)-Cov(\hat\beta_1,\hat\beta_2)=0.2483+10.7694-2(-0.49669)=12.01108$
+$Var(\hat\beta_1-\hat\beta_2)=Var(\hat\beta_1)+Var(\hat\beta_2)-2Cov(\hat\beta_1,\hat\beta_2)=MSE(C_{22}+C_{33}-2C_{23})$
+$=78.20842[0.2483+10.7694-2(-0.49669)]=939.3676$
 
 (f) Obtain MS(Pure Error). Hint: Pure Error can be found exactly the same way as we did for simple linear regression model. That is, group according to different combinations of levels from $X_1$ and $X_2$. First compute SS(Pure Error), and then divide it by degrees of freedom.
 
@@ -611,9 +627,9 @@ $H_1$: There is a lack of fit, the model is not appropriate;
 
 $SS_{LOF}=SSE-SS_{PE}=703.87576-28=675.8758$
 
-$df_{LOF}=dfE-df_{PE}=m-2=7$
+$df_{LOF}=dfE-df_{PE}=m-(k+1)=6$
 
-$F=\frac{SS_{LOF}/df_{LOF}}{MS_{PE}}=\frac{675.87576/7}{28/3}=10.34504$
+$F=\frac{SS_{LOF}/df_{LOF}}{MS_{PE}}=\frac{675.87576/6}{28/3}=12.06921$
 
 $F(0.05,6,3)=8.94$. Reject $H_0$ at the .05 level of significance.
 
@@ -959,7 +975,7 @@ Let $$SSE=\sum_{i=1}^n(y_i-\beta_0-x_i-\frac{\beta_0}{2}x_i^2)^2$$
 
 $$\frac{\partial SSE}{\partial\beta_0}=-2\sum_{i=1}^n(y_i-\hat\beta_0-x_i-\frac{\hat\beta_0}{2}x_i^2)(1+\frac{x_i^2}{2})\overset{set}{=}0$$
 
-$$\hat\beta_0=\frac{\sum_{i=1}^n(y_i-x_i)}{\sum_{i=1}^n(1+\frac{x_i^2}{2})},\hat\beta_1=1,\hat\beta_2=\frac{\sum_{i=1}^n(y_i-x_i)}{2\sum_{i=1}^n(1+\frac{x_i^2}{2})}$$
+$$\hat\beta_0=\frac{\sum_{i=1}^n(y_i-x_i)(1+\frac{x_i^2}{2})}{\sum_{i=1}^n(1+\frac{x_i^2}{2})^2},\hat\beta_1=1,\hat\beta_2=\frac{\sum_{i=1}^n(y_i-x_i)(1+\frac{x_i^2}{2})}{2\sum_{i=1}^n(1+\frac{x_i^2}{2})^2}$$
 
 
 \end{multicols}
@@ -994,9 +1010,9 @@ You can test three blocking factors by turning the Latin-square design into a Gr
 
 4. If the Relative Efficiency for the modified experiment was calculated to be 2.3, how many observations of heterogeneous experimental units in a CRD would be expected to obtain the same variance for the treatment mean as one replicate of the modified experiment.
 
-$\frac{(df_{E(LS)}+1)(df_{E(CRD)}+3)}{(df_{E(LS)}+3)(df_{E(CRD)}+1)}=2.3$
+$\frac{(df_{E(LS)}+1)(df_{E(CRD)}+3)MS_{CRD}}{(df_{E(LS)}+3)(df_{E(CRD)}+1)MS_{LS}}=2.3$
 
-$df_{E(LS)}=(p-1)(p-2)=20$,$(df_{E(GS)}=(p-1)(p-3)=15$, $df_{E(CRD)}=a(n-1)$
+$df_{E(LS)}=(p-1)(p-2)=20$,$(df_{E(GS)}=(p-1)(p-3)=15$, $df_{E(CRD)}=a(n-1)=7.2,32.5$
 
 
 \end{multicols}
@@ -1160,7 +1176,7 @@ Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$
 Let $SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-1-\beta_1x_i-\beta_1x_i^2)^2$
 
 $\frac{\partial SSE}{\partial\beta_2}=2\sum_{i=1}^n(y_i-1-\beta_1x_i-\beta_1x_i^2)(-x_i-x_i^2)\overset{set}{=}0$;
-$\hat\beta_1=\hat\beta_2=\frac{\sum_{i=1}^n(1+x_i^2)(y_i-1)}{\sum_{i=1}^n(x_i+x_i^2)^2}$
+$\hat\beta_1=\hat\beta_2=\frac{\sum_{i=1}^n(x_i+x_i^2)(y_i-1)}{\sum_{i=1}^n(x_i+x_i^2)^2}$
 
 
 \end{multicols}
@@ -1574,21 +1590,20 @@ The treatment effects are $\alpha=(\alpha_1,\alpha_2,\alpha_3)'$ and the block e
 The corrected total sum of squares is 820.
 
 
-\end{multicols}
+\begin{tabular}{ l|l|l|l|l||l|l|l|l }
+  & df $SS_F$ & $-\alpha$ & $SS_{\beta\gamma}$ & $-\beta$ & $SS_{\alpha\gamma}$ & $-\alpha$ & $SS_{\gamma}$\\\hline
 
- --------------------------------------------------------------------------------------------------
-    $SS_F$  $-\alpha$ $SS_{\beta\gamma}$ $-\beta$ $SS_{\alpha\gamma}$ $-\alpha-\beta$ $SS_{\gamma}$
- -  ---     ---       ---                ---      ---                 ---             ---
- R  360(2)  -120      240                -240     120                 -360(2)         0
+$\alpha$&2 &110 &-110 & 0   &      & 110 & -110 & 0\\\hline
  
- B  160(11) 0         160                -10      150                 0               160
- 
- E  300(22) +120      420                +250     550                 +360(2)         660
- 
- T  820(35)
- --------------------------------------------------------------------------------------------------
+$\gamma$&11&160 &     & 160 &      & 160 &      & 160\\\hline
 
-\begin{multicols}{2}
+$\beta$&   &250 &-10  & 240 & -250 & 0   &      & 0\\\hline
+
+E      &22 &300 &+120 & 420 & +250 & 550 & +110 & 660\\
+ 
+T      &35 &820
+
+\end{tabular}
 
 
 a) Find the sequential sums of squares for $\gamma_j$, $\alpha_i$, and $\beta$, in that order.
@@ -1630,7 +1645,7 @@ c) Test whether there is any treatment effect, after accounting for both blockin
 d) Suppose the (possibly incorrect) model $Y_{ij}=\mu+\alpha_i+\varepsilon_{ij}$ is fit to the data.
 Compute the residual sum of squares for this model.
 
-$SSE_{\alpha}=820-(420-300)=700$
+$SSE_{\alpha}=820-(420-300)=710$
 
 \end{multicols}
 
